# fily

./: Cargo.toml  README.md
crates/fily/: Cargo.toml  LICENSE.md
crates/fily-core/: Cargo.toml  LICENSE.md
crates/fily-core/src/: lib.rs
crates/fily/src/: main.rs
npm/fily/: README.md  package.json
